# snoocle

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  claude-write-test.md  pyproject.toml
docs/: ACCEPTANCE.md  ARCHITECTURE.md  DEPLOY_CLOUD_RUN.md
docs/plans/: agent-and-gui.md
scripts/: acceptance.py  setup_chord_model.sh  snoocle_runner.py
snoocle_server/: __init__.py  api.py  authz.py  chords.py  config.py  mcp_server.py  pipeline.py
snoocle_server/audio/: acquire.py  utils.py
snoocle_server/discovery/: __init__.py  chordsheet.py  fetch.py  models.py  search.py  service.py
snoocle_server/eval/: __init__.py  metrics.py  scorecard.py
snoocle_server/mir/: __init__.py  base.py  beats.py  chordrec.py  pipeline.py  structure.py
snoocle_server/reconcile/: __init__.py  agent_config.py  anthropic_agent.py  depth.py  engine.py  mock_reconciler.py  prompt.py  providers.py  trace.py
snoocle_server/schema/: __init__.py  song.py
snoocle_server/store/: __init__.py  agent_config.py  base.py  evals.py  firestore_store.py  gitstore.py  memory.py  runs.py
snoocle_server/ui/: app.js  index.html  style.css
tests/: fake_agent_mcp.py  test_acquire.py  test_agent_config.py  test_agent_provider.py  test_anthropic_agent.py  test_api.py  test_audio_utils.py  test_auth_token.py  test_chord_cnn_lstm.py  test_chord_engine_report.py  test_chords.py  test_chordsheet.py  test_combined_app.py  test_discovery_query.py  test_eval.py  test_gitstore.py  test_mcp_server.py  test_mir.py  test_mir_accuracy.py  test_mir_beats_fallback.py  test_pipeline_reliability.py  test_provider_parity.py  test_reconcile.py  test_run_trace.py  test_schema.py  test_store.py  test_ui.py  test_url_only_analyze.py  test_youtube_cookies.py  test_ytdlp_opts.py
tests/fixtures/: sheet_capo.txt  sheet_inline.txt  sheet_over_lyrics.txt
