[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "snoocle-server"
version = "0.1.0"
description = "Audio-to-song-data foundry: web-sourced chord/lyric text + MIR analysis, reconciled by a configurable LLM into Snoocle Song JSON."
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "httpx>=0.27",
    "yt-dlp>=2024.4.9",
    # 1.10.0 is the first release with the streamable-HTTP transport AND the
    # transport_security (DNS-rebinding) settings the HTTP MCP server uses.
    "mcp>=1.10.0",
    # Durable song store (Firestore Native). Uses Application Default
    # Credentials; the project comes from GOOGLE_CLOUD_PROJECT.
    "google-cloud-firestore>=2.11",
]

[project.optional-dependencies]
mir = [
    "librosa>=0.10",
    "soundfile>=0.12",
    "numpy>=1.24",
    "scipy>=1.10",
]
# Runtime deps of the vendored Chord-CNN-LSTM checkout (scripts/
# setup_chord_model.sh). torch is intentionally NOT pinned to a CPU build
# here — pass --index-url https://download.pytorch.org/whl/cpu at install
# time (as the Dockerfile does) to avoid the multi-GB CUDA wheel.
chordmodel = [
    "torch>=2.0",
    "h5py>=3.0",
    "pretty_midi>=0.2.9",
    "mir_eval>=0.7",
    "pydub>=0.23",
]
dev = ["pytest>=8"]

[project.scripts]
snoocle-server = "snoocle_server.api:main"
snoocle-mcp = "snoocle_server.mcp_server:main"

[tool.setuptools.packages.find]
include = ["snoocle_server*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
